--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/general-user-settings.component.html
@@ -11,7 +11,7 @@
     <div class="done-message__info-block">
         <div class="done-message__icon"><img src="/assets/images/svg/done.svg" alt=""></div>
         <div class="done-message__text">
-            <p class="accent">Изменения успешно сохранены</p>
+            <p class="accent">{{'user-settings.done-message' | translate}}</p>
         </div>
         <div class="btns-wrapper">
         </div>
