--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.scss
@@ -51,7 +51,9 @@ h1{
       position: absolute;
       p{
         margin-bottom: 0;
-        white-space: nowrap;}
+        white-space: nowrap;
+        background-color: #FAFBFC;
+      }
     }
   }
   .fields-value{
