--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
@@ -1,6 +1,6 @@
 <div class="inform_section">
   <div class="inform_section__title">
-    <h3>Дополнительное Образование</h3>
+    <h3>{{'general.additional-education' | translate}}</h3>
   </div>
   <div class="inform_section__fields">
     <div class="field-block-multiple">
@@ -9,7 +9,7 @@
           *ngFor="let arrayItem of userSettings.additionalEducation; let i = index">
 
           <div class="field-block">
-            <h5 class="fields-title">Учебное заведение</h5>
+            <h5 class="fields-title">{{'user-settings.institution-name' | translate}}</h5>
             <input
               class="fields-value"
               type="text"
@@ -17,18 +17,18 @@
               #institution="ngModel"
               minlength="4"
               name="institution-{{i}}"
-              placeholder="Учебное заведение"
+              placeholder="{{'user-settings.institution-name' | translate}}"
               [(ngModel)]="userSettings.additionalEducation[i].additionalInstitution"
               [ngClass] = "{not_Valid: !institution.valid }"
             >
             <div *ngIf="!institution.valid " class="alert-danger">
-              <p>institution must be at least 4 characters long.</p>
+              <p>{{'user-settings.alert-min-length3' | translate}}</p>
             </div>
           </div>
 
           <div class="toggle_block" [ngClass]="{ hidden: openItem !== i+1 }">
             <div class="field-block">
-              <h5 class="fields-title">Название курсов</h5>
+              <h5 class="fields-title">{{'user-settings.course-name' | translate}}</h5>
               <input
                 class="fields-value"
                 type="text"
@@ -36,19 +36,19 @@
                 #specialty="ngModel"
                 minlength="4"
                 name="specialty-{{i}}"
-                placeholder="Название курсов"
+                placeholder="{{'user-settings.course-name' | translate}}"
                 [(ngModel)]="userSettings.additionalEducation[i].courseName"
                 [ngClass] = "{not_Valid: !specialty.valid}"
               >
               <div *ngIf="!specialty.valid" class="alert-danger">
-                <p>specialty must be at least 4 characters long.</p>
+                <p>{{'user-settings.alert-min-length3' | translate}}</p>
               </div>
             </div>
 
             <div class="studyPeriod">
               <div class="period-wrapper">
                 <div class="field-block service-selects ">
-                  <label class="block-title" for="startEducation">Начало
+                  <label class="block-title" for="startEducation">{{'user-settings.education-start' | translate}}
                   </label>
                   <mat-select name="startEducationMonth" id="startEducationMonth"
                     [(ngModel)]="userSettings.additionalEducation[i].startStudyMonth">
@@ -69,7 +69,7 @@
 
               <div class="period-wrapper">
                 <div class="field-block service-selects monthes">
-                  <label class="block-title" for="startEducation">Окончание
+                  <label class="block-title" for="startEducation">{{'user-settings.education-end' | translate}}
                   </label>
                   <mat-select name="endEducationMonth" id="endEducationMonth"
                     [(ngModel)]="userSettings.additionalEducation[i].endStudyMonth">
@@ -102,7 +102,7 @@
             <div class="add-photos">
               <input type="file" id="additionalDiplomaFiles-{{i}}" class="input-file" #file name="file"
                 (change)="fileProgress($event.target.files, userSettings.additionalEducation[i].id, i)" />
-              <label for="additionalDiplomaFiles-{{i}}">Загрузить файл/фото диплома</label>
+              <label for="additionalDiplomaFiles-{{i}}">{{'user-settings.onload-diploma' | translate}}</label>
             </div>
 
             <button type="button" class="delete-education">
@@ -119,7 +119,7 @@
           <i class="material-icons">
             add_circle_outline
           </i>
-          <span>Добавить образование</span>
+          <span>{{'user-settings.add-education' | translate}}</span>
         </button>
 
       </form>
