--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/location-language-user-settings/location-language-user-settings.component.html
@@ -1,67 +1,68 @@
 <div class="inform_section">
   <div class="inform_section__title">
-    <h3>Местоположение и языки</h3>
+    <h3>{{'user-settings.location-title' | translate}}</h3>
   </div>
   <div class="inform_section__fields">
-    <div class="inputs-wrapper">
+    <form #form="ngForm">
+      <div class="inputs-wrapper">
 
-      <div class="field-block">
-        <h5 class="fields-title">Страна</h5>
-        <input class="fields-value" type="text" knifeAlphanumeric [(ngModel)]="userSettings.country">
-      </div>
+        <div class="field-block">
+          <h5 class="fields-title">{{'general.country' | translate}}</h5>
+          <input class="fields-value" type="text" [(ngModel)]="userSettings.country" #country="ngModel" name="country" [pattern]="unamePattern">
+          <div [hidden]="country.valid || country.untouched" class="alert-danger">
+            <p>{{'user-settings.alert-incorrect-symbols' | translate}}</p>
+          </div>
+        </div>
 
-      <div class="field-block">
-        <h5 class="fields-title">Город</h5>
-        <input class="fields-value" type="text" knifeAlphanumeric [(ngModel)]="userSettings.city">
-      </div>
+        <div class="field-block">
+          <h5 class="fields-title">{{'general.city' | translate}}</h5>
+          <input class="fields-value" type="text" [(ngModel)]="userSettings.city" #city="ngModel" name="city" [pattern]="unamePattern">
+          <div [hidden]="city.valid || city.untouched" class="alert-danger">
+            <p>{{'user-settings.alert-incorrect-symbols' | translate}}</p>
+          </div>
+        </div>
 
-      <div class="field-block-multiple">
+        <div class="field-block-multiple">
 
-        <div class="single-lang-wrapper" *ngFor="let arrayItem of userSettings.language; let i = index">
+          <div class="single-lang-wrapper" *ngFor="let arrayItem of userSettings.language; let i = index">
 
-          <div class="field-block"  *ngIf="userSettings.language">
-            <h5 class="fields-title">Язык</h5>
-            <input class="fields-value"
-              [(ngModel)]="userSettings.language[i].langName"
-              #langName="ngModel"
-              [pattern]="unamePattern"
-              type="text" 
-              [ngClass] = "{not_Valid: !langName.valid && langName.control.touched}"
-              required            
-            >
-            <div *ngIf="langName.control.touched && langName.control.status === 'INVALID'" class="alert-danger">
-              <p>Поле заполнено неверно. Спецсимволов запрещены</p>
+            <div class="field-block" *ngIf="userSettings.language">
+              <h5 class="fields-title">{{'user-settings.language' | translate}}</h5>
+              <input class="fields-value" [(ngModel)]="userSettings.language[i].langName" #langName="ngModel"
+                [pattern]="unamePattern" type="text" name='langName'
+                [ngClass]="{not_Valid: !langName.valid && langName.control.touched}" required>
+              <div *ngIf="langName.control.touched && langName.control.status === 'INVALID'" class="alert-danger">
+                <p>{{'user-settings.alert-required' | translate}}</p>
+              </div>
+            </div>
+
+            <div class="field-block language-level">
+              <label class="block-title" for="langLevel">{{'user-settings.language-level' | translate}}</label>
+              <mat-select name="langLevel" id="langLevel" [(ngModel)]="userSettings.language[i].langLevel">
+                <ng-container *ngFor="let langLevel of languagesLevel">
+                  <mat-option [value]="langLevel">{{ languageTranslates[langLevel-1] }}</mat-option>
+                </ng-container>
+              </mat-select>
+            </div>
+
+            <div class="delete-language">
+              <i class="material-icons" (click)="deleteMainOption(i)">delete</i>
             </div>
           </div>
 
-          <div class="field-block language-level">
-            <label class="block-title" for="langLevel">Уровень владения</label>
-            <mat-select 
-              name="langLevel" 
-              id="langLevel" 
-              [(ngModel)]="userSettings.language[i].langLevel">
-              <ng-container *ngFor="let langLevel of languagesLevel">
-                <mat-option [value]="langLevel">{{ languageTranslates[langLevel-1] }}</mat-option>
-              </ng-container>
-            </mat-select>
+          <div class="add-languahe">
+            <button class="add btn-third" (click)="addLanguage()">
+              <i class="material-icons">
+                add_circle_outline
+              </i>
+              <span>{{'user-settings.add-lang' | translate}}</span>
+            </button>
           </div>
 
-          <div class="delete-language">
-            <i class="material-icons" (click)="deleteMainOption(i)">delete</i>
-          </div>
-        </div>
-
-        <div class="add-languahe">
-          <button class="add btn-third" (click)="addLanguage()" >
-            <i class="material-icons">
-              add_circle_outline
-            </i>
-            <span>Добавить язык</span>
-          </button>
         </div>
 
       </div>
 
-    </div>
+    </form>
   </div>
 </div>
