--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/home-user-settings.component.html
@@ -2,16 +2,16 @@
   <h1>Настройки</h1>
 
   <mat-tab-group class="tabs" animationDuration="0ms" mat-align-tabs="center" >
-    <mat-tab label="Общие">
+    <mat-tab label="{{'user-settings.main-title' | translate}}">
       <app-general-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-general-user-settings>
     </mat-tab>
     <!-- <mat-tab label="Финансы">
       <app-finance-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-finance-user-settings>
     </mat-tab> -->
-    <mat-tab label="Уведомления">
+    <mat-tab label="{{'user-settings.notifications-title' | translate}}">
       <app-notifications-user-settings *ngIf="userSettingsModel" [userSettingsModel]="userSettingsModel"></app-notifications-user-settings>
     </mat-tab>
-    <mat-tab label="Безопасность">
+    <mat-tab label="{{'user-settings.security-title' | translate}}">
       <app-security-user-settings *ngIf="userSettingsModel" [userSettings]="userSettingsModel"></app-security-user-settings>
     </mat-tab>
   </mat-tab-group>
