--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-pass-user-settings/security-pass-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/security-user-settings/security-pass-user-settings/security-pass-user-settings.component.html
@@ -1,19 +1,19 @@
 <form [formGroup]="passForm" (ngSubmit)="updatePass(passForm)" class="form-change-password">
   <div class="inform_section__title">
-    <h3>Смена пароля</h3>
+    <h3>{{'user-settings.change-password-title' | translate}}</h3>
   </div>
   <div class="inform_section__fields">
     <div class="inputs-wrapper">
 
       <div class="fields">
         <div class="field-wrapper">
-          <h5 class="fields-title">Старый пароль</h5>
+          <h5 class="fields-title">{{'user-settings.old-password' | translate}}</h5>
           <input class="fields-value" type="password" formControlName='oldPassword' maxlength="50" (ngModelChange)='resetValidation()'>
           <div class="error-message" *ngIf="submitedPassForm && !changePasswordResult && passForm.controls.oldPassword.value" >
-            Старый пароль введен неверно
+            {{'user-settings.alert-oldpass-incorrect' | translate}}
           </div>
           <div class="error-message" *ngIf="submitedPassForm  && !passForm.controls.oldPassword.value">
-            Это обязательное поле
+            {{'user-settings.alert-required' | translate}}
           </div>
         </div>
       </div>
@@ -21,7 +21,7 @@
       <form formGroupName="passwords" class="form-change-password-confirm">
 
         <div class="fields">
-          <h5 class="fields-title">Новый пароль (если необходимо изменить)</h5>
+          <h5 class="fields-title">{{'user-settings.new-password' | translate}}</h5>
           <input class="fields-value new-passrord" type="password" placeholder="" formControlName="newPassword" required>
           <div class="pass-erorrs">
             <span
@@ -35,31 +35,26 @@
             <span
               [ngClass]="passForm.get('passwords.newPassword').hasError('required') || passForm.get('passwords.newPassword').hasError('minLengthCharacters') ? 'unvalidated': 'validated'"></span>
             <ul class="description" *ngIf="passForm.get('passwords.newPassword').invalid">
-              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasNumber')">Должна быть минимум одна цифра
-              </li>
-              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasSmallCase')">Должна быть минимум одна
-                маленькая буква a-z</li>
-              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasCapitalCase')">Должна быть минимум одна
-                большая буква A-Z</li>
-              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasSpecialCharacters')">Должна быть минимум
-                один спец символ</li>
-              <li *ngIf="passForm.get('passwords.newPassword').hasError('minLengthCharacters')">Пароль не меньше 8
-                символов</li>
+              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasNumber')">{{'auth-page.password-field.numbers-required' | translate}}</li>
+              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasSmallCase')">{{'auth-page.password-field.small-case' | translate}}</li>
+              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasCapitalCase')">{{'auth-page.password-field.uppercase' | translate}}</li>
+              <li *ngIf="passForm.get('passwords.newPassword').hasError('hasSpecialCharacters')">{{'auth-page.password-field.specific-simbols' | translate}}</li>
+              <li *ngIf="passForm.get('passwords.newPassword').hasError('minLengthCharacters')">{{'auth-page.password-field.min-length' | translate}}</li>
             </ul>
           </div>
           <div class="error-message" *ngIf="submitedPassForm && !passForm.get('passwords.newPassword').value">
-            Это обязательное поле
+            {{'user-settings.alert-required' | translate}}
           </div>
         </div>
 
         <div class="fields">
-          <h5 class="fields-title">Повторите новый пароль</h5>
+          <h5 class="fields-title">{{'user-settings.repeat-new-password' | translate}}</h5>
           <input class="fields-value" type="password" placeholder="" formControlName="newPassword_confirmation">
           <div class="error-message" *ngIf="passForm.hasError('notSame', 'passwords')">
-            Пароли не совпадает
+            {{'user-settings.repeat-new-password' | translate}}
           </div>
           <div class="error-message" *ngIf="submitedPassForm && !passForm.get('passwords.newPassword_confirmation').value && !passForm.hasError('notSame', 'passwords')">
-            Это обязательное поле
+            {{'user-settings.alert-required' | translate}}
           </div>
         </div>
 
@@ -67,7 +62,7 @@
     </div>
   </div>
   <div class="form-butons">
-    <button class="save-all" type="submit">сохранить изменения</button>
+    <button class="save-all" type="submit">{{'user-settings.save-changes' | translate}}</button>
   </div>
 </form>
 
@@ -76,7 +71,7 @@
   <div class="done-message__info-block">
       <div class="done-message__icon"><img src="/assets/images/svg/done.svg" alt=""></div>
       <div class="done-message__text">
-          <p class="accent">Изменения успешно сохранены</p>
+          <p class="accent">{{'user-settings.done-message' | translate}}</p>
       </div>
       <div class="btns-wrapper">
       </div>
