--- a/src/app/home-page/home-page-search/home-page-search.component.html
+++ b/src/app/home-page/home-page-search/home-page-search.component.html
@@ -1,8 +1,8 @@
 <div class="content">
     <!-- <img src="/assets/images/images/Vector_75.svg" alt=""> -->
     <div class="wrapper">
-        <h3 class="section-subtitle">Gigrum - онлайн биржа фрилансеров для бизнеса</h3>
-        <h1 class="section-title">Десятки тысяч услуг, скорость и качество исполнения имеено здесь</h1>
-        <a class="btn outline" [routerLink]="['/catalog'] | localize" >перейти в каталог</a>
+        <h3 class="section-subtitle">{{'home-page.search-subtitle' | translate}}</h3>
+        <h1 class="section-title">{{'home-page.search-title' | translate}}</h1>
+        <a class="btn outline" [routerLink]="['/catalog'] | localize" >{{'home-page.to-catalog' | translate}}</a>
     </div>
 </div>
