--- a/src/app/catalog-page/catalog/catalog.component.html
+++ b/src/app/catalog-page/catalog/catalog.component.html
@@ -14,7 +14,8 @@
   <app-filter [catalogFilters]="catalogFilters"></app-filter>
   <app-items></app-items>
   <app-catalog-pagination [catalogFilters]="catalogFilters"></app-catalog-pagination>
-
-
 </div>
+
+<app-footer></app-footer>
+
 
