--- a/src/app/home-page/home-page-advantages/home-page-advantages.component.html
+++ b/src/app/home-page/home-page-advantages/home-page-advantages.component.html
@@ -1,12 +1,12 @@
 <div class="wrapper">
     <div class="main-info">
         <div class="main-info__wrap">
-            <h3 class="section__subtitle">преимущества</h3>
-            <h2 class="section__title">Почему Gigrum?</h2>
+            <h3 class="section__subtitle">{{'home-page.advantages-subtitle' | translate}}</h3>
+            <h2 class="section__title">{{'home-page.advantages-title' | translate}}</h2>
             <p class="main-info__text">
-                Добро пожаловать в сообщество веб-разработчиков, дизайнеров, создателей текстового, графического и видео контента, переводчиков и мастеров озвучки.
+                {{'home-page.advantages-text' | translate}}
             </p>
-            <a class="btn colored" [routerLink]="['/auth'] | localize" >зарегистрироваться</a>
+            <a class="btn colored" [routerLink]="['/auth'] | localize" >{{'home-page.advantages-btn' | translate}}</a>
         </div>
     </div>
     <div class="features">
@@ -16,10 +16,10 @@
                     <div class="features-item">
                         <div class="features-item__top" (click)="toggleTab(0)">
                             <div class="features-item__icon"><img src="assets/images/icons/advantages/payment-protection.svg" alt=""></div>
-                            <h4 class="features-item__title">Защита платежей</h4>
+                            <h4 class="features-item__title">{{'home-page.advantages-item1' | translate}}</h4>
                         </div>
                         <p class="features-item__text">
-                            Для безопасности сделки, зарезервированная сумма хранится на сервисе до успешного выполнения проекта.
+                            {{'home-page.advantages-item1-text' | translate}}
                         </p>
                     </div>
                 </div>
@@ -27,10 +27,10 @@
                     <div class="features-item">
                         <div class="features-item__top" (click)="toggleTab(1)">
                             <div class="features-item__icon"><img src="assets/images/icons/advantages/opacity.svg" alt=""></div>
-                            <h4 class="features-item__title">Прозрачность</h4>
+                            <h4 class="features-item__title">{{'home-page.advantages-item2' | translate}}</h4>
                         </div>
                         <p class="features-item__text">
-                            Только комиссия за сделку. Никаких скрытых платежей, платного повышения рейтинга и статусов пользователя.
+                            {{'home-page.advantages-item2-text' | translate}}
                         </p>
                     </div>
                 </div>
@@ -40,10 +40,10 @@
                     <div class="features-item">
                         <div class="features-item__top" (click)="toggleTab(2)"> 
                             <div class="features-item__icon"><img src="assets/images/icons/advantages/quick-payouts.svg" alt=""></div>
-                            <h4 class="features-item__title">Быстрые выплаты</h4>
+                            <h4 class="features-item__title">{{'home-page.advantages-item3' | translate}}</h4>
                         </div>
                         <p class="features-item__text">
-                            Отправление средств на счет фрилансера осуществляется на протяжении часа после успешного завершения проекта.
+                            {{'home-page.advantages-item3-text' | translate}}
                         </p>
                     </div>
                 </div>
@@ -52,10 +52,10 @@
                     <div class="features-item">
                         <div class="features-item__top" (click)="toggleTab(3)">
                             <div class="features-item__icon"><img src="assets/images/icons/advantages/cashback.svg" alt=""></div>
-                            <h4 class="features-item__title">Кэшбэк</h4>
+                            <h4 class="features-item__title">{{'home-page.advantages-item4' | translate}}</h4>
                         </div>
                         <p class="features-item__text">
-                            Процент от каждой успешной сделки, которая прошла без арбитража, будет начисляться на личный счет в сервисе.
+                            {{'home-page.advantages-item4-text' | translate}}
                         </p>
                     </div>
                 </div>
@@ -64,10 +64,10 @@
                     <div class="features-item">
                         <div class="features-item__top" (click)="toggleTab(4)">
                             <div class="features-item__icon"><img src="assets/images/icons/advantages/convenient-system.svg" alt=""></div>
-                            <h4 class="features-item__title"> Удобная система</h4>
+                            <h4 class="features-item__title"> {{'home-page.advantages-item5' | translate}}</h4>
                         </div>
                         <p class="features-item__text">
-                            Простой и комфортный интерфейс для мониторинга выполнения проекта, переписки, отправки файлов.
+                            {{'home-page.advantages-item5-text' | translate}}
                         </p>
                     </div>
                 </div>
