--- a/src/app/home-page/home-page-app-news/home-page-app-news.component.html
+++ b/src/app/home-page/home-page-app-news/home-page-app-news.component.html
@@ -1,11 +1,11 @@
 <div class="wrapper">
     <div class="section-info">
         <div class="section-info__wrap">
-            <h3 class="section-info__subtitle">мобильное приложение</h3>
-            <h2 class="section-info__title">Совсем скоро!<br> 
-                Ваш помошник будет всегда под рукой</h2>
+            <h3 class="section-info__subtitle">{{'home-page.app-news-subtitle' | translate}}</h3>
+            <h2 class="section-info__title">{{'home-page.app-news-title' | translate}}<br> 
+                {{'home-page.app-news-title2' | translate}}</h2>
             <p class="section-info__text">
-                Наша команда уже разрабатывает для вас мобильное приложение. 
+                {{'home-page.app-news-text' | translate}}
             </p>
         </div>
     </div>
