--- a/src/app/home-page/home-page-how-work/home-page-how-work.component.html
+++ b/src/app/home-page/home-page-how-work/home-page-how-work.component.html
@@ -1,22 +1,22 @@
 <div class="wrapper">
     <div class="main-info">
         <div class="main-info__wrap">
-            <h3 class="section__subtitle">работай с уверенностью</h3>
-            <h2 class="section__title">Как это работает?</h2>
+            <h3 class="section__subtitle">{{'home-page.how-work-subtitle' | translate}}</h3>
+            <h2 class="section__title">{{'home-page.how-work-title' | translate}}</h2>
             <div class="tabs">
                 <div class="tabs-list">
-                    <div class="tab" [ngClass]="{active: activeTab === 0}" (click)="selectTab(0)">Для заказчика</div>
-                    <div class="tab" [ngClass]="{active: activeTab === 1}" (click)="selectTab(1)">Для фрилансера</div>
+                    <div class="tab" [ngClass]="{active: activeTab === 0}" (click)="selectTab(0)">{{'home-page.how-work-for-customer' | translate}}</div>
+                    <div class="tab" [ngClass]="{active: activeTab === 1}" (click)="selectTab(1)">{{'home-page.how-work-for-freelancer' | translate}}</div>
                 </div>
                 <div class="tabs-slider">
                     <div class="indicator" [ngClass]="{activeOne: activeTab === 0, activeTwo: activeTab === 1}"></div>
                 </div>
                 <div class="tabs-text" *ngIf="activeTab === 0">
-                    <p>Воспользуйтесь фильтрами поиска, чтобы выбрать необходимую категорию услуг для вашего проекта. </p>
-                    <p>Теперь осталось всего лишь определиться с подходящим фрилансером. Обратите внимание на 4 простых шага, чтобы найти лучшего исполнителя.</p>
+                    <p>{{'home-page.how-work-text' | translate}}</p>
+                    <p>{{'home-page.how-work-text2' | translate}}</p>
                 </div>
                 <div class="tabs-text" *ngIf="activeTab === 1">
-                    <p>Сделайте четыре простых шага, чтобы присоединиться з сообществу талантливых и креативных мастеров.</p>
+                    <p>{{'home-page.how-work-text3' | translate}}</p>
                 </div>
             </div>
         </div>
@@ -32,8 +32,8 @@
                         <div class="step-img-wrap back"><img src="assets/images/images/step1.svg" alt=""></div>
                     </div>
                 </div> 
-                <div class="step-text" *ngIf="activeTab === 0">Ознакомьтесь с примерами работ фрилансера</div>
-                <div class="step-text" *ngIf="activeTab === 1">Создайте профайл - это ваша визитная карточка фрилансера.</div>
+                <div class="step-text" *ngIf="activeTab === 0">{{'home-page.how-work-item1-customer' | translate}}</div>
+                <div class="step-text" *ngIf="activeTab === 1">{{'home-page.how-work-item1-freelancer' | translate}}</div>
             </div>
             <div class="step">
                 <div class="step-number">2</div>
@@ -43,8 +43,8 @@
                         <div class="step-img-wrap back"><img src="assets/images/images/step2.svg" alt=""></div>
                     </div>
                 </div> 
-                <div class="step-text" *ngIf="activeTab === 0">Почитайте отзывы от предыдущих заказчиков</div>
-                <div class="step-text" *ngIf="activeTab === 1">Опишите весь спектр своего опыта, подберите лучшие работы для портфолио, укажите преимущества своего сервиса.</div>
+                <div class="step-text" *ngIf="activeTab === 0">{{'home-page.how-work-item2-customer' | translate}}</div>
+                <div class="step-text" *ngIf="activeTab === 1">{{'home-page.how-work-item2-freelancer' | translate}}</div>
             </div>
             <div class="step">
                 <div class="step-number">3</div>
@@ -54,8 +54,8 @@
                         <div class="step-img-wrap back"><img src="assets/images/images/step3.svg" alt=""></div>
                     </div>
                 </div> 
-                <div class="step-text" *ngIf="activeTab === 0">Выберите удобный пакет услуг для проекта</div>
-                <div class="step-text" *ngIf="activeTab === 1">Создайте три пакета сервиса Базовый, Стандартный и Премиум. Это позволит увеличить ассортимент опций и часто среднюю цену сделки.</div>
+                <div class="step-text" *ngIf="activeTab === 0">{{'home-page.how-work-item3-customer' | translate}}</div>
+                <div class="step-text" *ngIf="activeTab === 1">{{'home-page.how-work-item3-freelancer' | translate}}</div>
             </div> 
             <div class="step">
                 <div class="step-number">4</div>
@@ -65,8 +65,8 @@
                         <div class="step-img-wrap back"><img src="assets/images/images/step4.svg" alt=""></div>
                     </div>
                 </div> 
-                <div class="step-text" *ngIf="activeTab === 0">Свяжитесь с фрилансером для согласования деталей</div>
-                <div class="step-text" *ngIf="activeTab === 1">Используйте дополнительные опции для увеличения результатов обеих сторон.</div>
+                <div class="step-text" *ngIf="activeTab === 0">{{'home-page.how-work-item4-customer' | translate}}</div>
+                <div class="step-text" *ngIf="activeTab === 1">{{'home-page.how-work-item4-freelancer' | translate}}</div>
             </div>
         </div>
         <div class="slider-navigation">
