--- a/src/app/home-page/home-page-support/home-page-support.component.html
+++ b/src/app/home-page/home-page-support/home-page-support.component.html
@@ -4,13 +4,13 @@
   </div>
   <div class="main-info">
     <div class="main-info__wrap">
-      <h3 class="section__subtitle">всегда на связи</h3>
-      <h2 class="section__title">Поддержка 24/7</h2>
+      <h3 class="section__subtitle">{{'home-page.support-subtitle' | translate}}</h3>
+      <h2 class="section__title">{{'home-page.support-title' | translate}}</h2>
       <div class="main-info__text">
-        <p>Техническая и консультационная поддержка команды Gigrum, которая доступна круглые сутки каждый день недели.
+        <p>{{'home-page.support-text' | translate}}
         </p>
       </div>
-      <a class="btn outline">перейти на страницу поддержки</a>
+      <a class="btn outline">{{'home-page.support-btn' | translate}}</a>
     </div>
   </div>
 </div>
