--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -230,3 +230,5 @@
         <app-users-comments *ngIf="userData" [userData]="userData" [userRole]="userRole" id="comments"></app-users-comments>
     </div>
 </div>
+
+<app-footer *ngIf="userData"></app-footer>
