--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -24,7 +24,7 @@
             <div class="avatar-wrapper">
                 <div class="avatar-aura">
                     <ng-container *ngFor="let lvl of [0,1,2,3,4]">
-                        <img src="'assets/images/images/aura_lvl{{lvl}}.svg'" alt="user-lvl" *ngIf="user.rank_id === lvl">
+                        <img src="assets/images/images/aura_lvl{{lvl}}.svg" alt="user-lvl" *ngIf="user.rank_id === lvl">
                     </ng-container>
                 </div>
                 <img [src]="user.avatar" alt="avatar" />
