--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -215,7 +215,7 @@
       width: 107px;
       height: 107px;
       border-radius: 50%;
-      margin-bottom: 8px;
+      margin-bottom: 30px;
       position: relative;
       img {
         height: 100%;
@@ -229,8 +229,8 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 160%;
-      height: 160%;
+      width: 175%;
+      height: 175%;
     }
   }
 
@@ -241,7 +241,7 @@
     font-size: 17px;
     line-height: 24px;
     color: #ffffff;
-    margin: 0 auto 8px;
+    margin: 15px auto 8px;
     position: relative;
     width: max-content;
     left: 50%;
