--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/additional-education-user-settings/additional-education-user-settings.component.html
@@ -95,6 +95,7 @@
               <ng-container *ngFor="let diplomaPhoto of userSettings.additionalEducation[i].additionalDiploma; let x = index">
                 <div  class="img-item" *ngIf="diplomaPhoto != null" >
                   <img  [src]="diplomaPhoto" height="300" />
+                  <div class="delete-photo" (click)="deleteDiplomaPhoto(diplomaPhoto, i, x)"></div>
                 </div>
               </ng-container>
             </div>
