--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/general-user-settings/education-user-settings/education-user-settings.component.html
@@ -87,7 +87,7 @@
               <ng-container *ngFor="let diplomaPhoto of userSettings.education[i].diploma; let x = index">
                 <div  class="img-item" *ngIf="diplomaPhoto != null" >
                   <img  [src]="diplomaPhoto" height="300" />
-                  <!-- <div class="delete-photo" (click)=""></div> -->
+                  <div class="delete-photo" (click)="deleteDiplomaPhoto(diplomaPhoto, i, x)"></div>
                 </div>
               </ng-container>
             </div>
