--- a/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.html
+++ b/src/app/home-page/home-page-find-specialist/home-page-find-specialist.component.html
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="main-info">
     <div class="main-info__wrap">
-      <h3 class="section__subtitle">Категории работ</h3>
-      <h2 class="section__title">Найдите идеального специалиста</h2>
+      <h3 class="section__subtitle">{{'home-page.specialist-subtitle' | translate}}</h3>
+      <h2 class="section__title">{{'home-page.specialist-title' | translate}}</h2>
     </div>
   </div>
   <div class="freelancer-list">
@@ -12,10 +12,9 @@
         <div class="freelancer-item__top">
           <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-designer.svg" alt="">
           </div>
-          <div class="freelancer-item__title">Графика и Дизайн</div>
+          <div class="freelancer-item__title">{{'home-page.specialist-item1' | translate}}</div>
         </div>
-        <div class="freelancer-item__text">Создаем дизайн логотипов, сайтов, моб. приложений, дизайн полиграфии,
-          брендбук.
+        <div class="freelancer-item__text">{{'home-page.specialist-item1-text' | translate}}
         </div>
       </div>
     </a>
@@ -24,10 +23,9 @@
       <div class="freelancer-item">
         <div class="freelancer-item__top">
           <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-web.svg" alt=""></div>
-          <div class="freelancer-item__title">Вёрстка и Разработка</div>
+          <div class="freelancer-item__title">{{'home-page.specialist-item2' | translate}}</div>
         </div>
-        <div class="freelancer-item__text">Разработка вебсайтов, мобильных приложений, программ и онлайн- сервисов,
-          верстка, QA</div>
+        <div class="freelancer-item__text">{{'home-page.specialist-item2-text' | translate}}</div>
       </div>
     </a>
 
@@ -35,10 +33,9 @@
       <div class="freelancer-item">
         <div class="freelancer-item__top">
           <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-copyright.svg" alt=""></div>
-          <div class="freelancer-item__title">Копирайтинг и Переводы</div>
+          <div class="freelancer-item__title">{{'home-page.specialist-item3' | translate}}</div>
         </div>
-        <div class="freelancer-item__text">Рерайт, художественный текст, веб-контент, рефераты, курсовые, дипломы,
-          статьи.
+        <div class="freelancer-item__text">{{'home-page.specialist-item3-text' | translate}}
         </div>
       </div>
     </a>
@@ -46,31 +43,27 @@
       <div class="freelancer-item">
         <div class="freelancer-item__top">
           <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-seo.svg" alt=""></div>
-          <div class="freelancer-item__title">SЕО и Аналитика</div>
+          <div class="freelancer-item__title">{{'home-page.specialist-item4' | translate}}</div>
         </div>
-        <div class="freelancer-item__text">Исследование рынка и опросы, поисковое продвижение, продажа ссылок, SERM,
-          генерация лидов</div>
+        <div class="freelancer-item__text">{{'home-page.specialist-item4-text' | translate}}</div>
       </div>
     </a>
     <a [routerLink]="['/catalog', 'Marketing'] | localize" class="freelancer-item__wrapper">
       <div class="freelancer-item">
         <div class="freelancer-item__top">
           <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-marketing.svg" alt=""></div>
-          <div class="freelancer-item__title">Интернет маркетинг</div>
+          <div class="freelancer-item__title">{{'home-page.specialist-item5' | translate}}</div>
         </div>
-        <div class="freelancer-item__text">Продвижение сайта и блога, реклама в социальных медиа, поисковые системы,
-          SMM,
-          e-mail маркетинг.</div>
+        <div class="freelancer-item__text">{{'home-page.specialist-item5-text' | translate}}</div>
       </div>
     </a>
     <a [routerLink]="['/catalog', 'Audio-Video'] | localize" class="freelancer-item__wrapper">
       <div class="freelancer-item">
         <div class="freelancer-item__top">
           <div class="freelancer-item__icon"><img src="assets/images/home-page/specialist-video.svg" alt=""></div>
-          <div class="freelancer-item__title">Видео и Анимация</div>
+          <div class="freelancer-item__title">{{'home-page.specialist-item6' | translate}}</div>
         </div>
-        <div class="freelancer-item__text">2D Анимация, 3D Анимация, музыка/звуки, видео, виртуальные туры, раскадровки,
-          гейм-арт.</div>
+        <div class="freelancer-item__text">{{'home-page.specialist-item6-text' | translate}}</div>
       </div>
     </a>
 
