--- a/src/app/home-page/home-page-questions/home-page-questions.component.html
+++ b/src/app/home-page/home-page-questions/home-page-questions.component.html
@@ -1,21 +1,20 @@
 <div class="wrapper">
     <div class="main-info">
         <div class="main-info__wrap">
-            <h3 class="section__subtitle">появились вопросы?</h3>
-            <h2 class="section__title">Часто задаваемые вопросы</h2>
+            <h3 class="section__subtitle">{{'home-page.guestion-subtitle' | translate}}</h3>
+            <h2 class="section__title">{{'home-page.guestion-title' | translate}}</h2>
             <div class="main-info__text">
-                <p>Выберите необходимую категорию: 
-                    Заказчикам / Фрилансерам</p>
-                <p>Не нашли ответ? Переходите на страницу Вопросы и Ответы.</p>
+                <p>{{'home-page.guestion-text' | translate}}</p>
+                <p>{{'home-page.guestion-text2' | translate}}</p>
             </div>
-            <a class="btn outline">Найти ответ</a>
+            <a class="btn outline">{{'home-page.guestion-btn' | translate}}</a>
         </div>
     </div>
     <div class="guestion-tabs">
       <div class="tabs">
         <div class="tabs-list">
-            <div class="tab" [ngClass]="{active: activeTab === 'customer'}" (click)="selectTab('customer')">Для заказчика</div>
-            <div class="tab" [ngClass]="{active: activeTab === 'freelancer'}" (click)="selectTab('freelancer')">Для фрилансера</div>
+            <div class="tab" [ngClass]="{active: activeTab === 'customer'}" (click)="selectTab('customer')">{{'home-page.how-work-for-customer' | translate}}</div>
+            <div class="tab" [ngClass]="{active: activeTab === 'freelancer'}" (click)="selectTab('freelancer')">{{'home-page.how-work-for-freelancer' | translate}}</div>
         </div>
         <div class="tabs-slider">
             <div class="indicator" [ngClass]="{activeOne: activeTab === 'customer', activeTwo: activeTab === 'freelancer'}"></div>
@@ -26,11 +25,11 @@
           <mat-expansion-panel class="question-item" *ngFor="let question of questions[activeTab];" hideToggle>
             <mat-expansion-panel-header class="question-item__title" [collapsedHeight]="customCollapsedHeight">
               <mat-panel-title >
-                {{question.title}}
+                {{question.title | translate}}
                 <div class="element-plus"></div>
               </mat-panel-title>
             </mat-expansion-panel-header>
-            <p class="question-item__text">{{question.text}}</p>
+            <p class="question-item__text">{{question.text | translate}}</p>
           </mat-expansion-panel>
       </mat-accordion>
       </div>
